run files to use maven