@@ -1,6 +1,3 @@
 #!/bin/sh
 
-export CLASSPATH=build/libs/DemoFX.jar
-
-# May need to set -Xmx1024m on low RAM  machines
-"$JAVA_HOME/bin/java" -XX:+PrintGCDetails -XX:+PrintTenuringDistribution -Xloggc:demofx.gc.log -jar $CLASSPATH $@
+mvn clean compile exec:java -Dexec.args="$*"
